# MediMind-Ai-Therapist

./: README.md  frontend.py  main.py  pyproject.toml
backend/: ai_agent.py  config.py  main.py  tools.py
